scrounge shop name and country from piola. Search using google places and put the data into a table

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>[5.1.6,)</version>
         </dependency>
+        <dependency>
+            <groupId>se.walkercrou</groupId>
+            <artifactId>google-places-api-java</artifactId>
+            <version>[2.1.2,)</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
