--- a/pom.xml
+++ b/pom.xml
@@ -65,10 +65,31 @@
             <artifactId>google-places-api-java</artifactId>
             <version>[2.1.2,)</version>
         </dependency>
+        <!--force download of new httpclient for the certificate problem when accessing google-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>[4.5.1,)</version>
+        </dependency>
+<!--        <dependency>
+    <groupId>portlet</groupId>
+                   <artifactId>wp.struts.standard.framework</artifactId>
+                    <version>1.0</version>
+                    <scope>system</scope>  
+                    <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/wp.struts.standard.framework.jar</systemPath>    
+          </dependency>-->
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+<!--        <repositories> 
+        <repository> 
+            <layout>legacy</layout> 
+            <id>AbcRepository</id> 
+            <name>AbcRepository</name> 
+            <url>file:///<some-path></url> 
+        </repository> 
+    </repositories> -->
 </project>
