--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>[1.1.2,)</version>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
